# KotaJa

./: .coverage  .env.example  .gitignore  mkdocs.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docs.yml
app/: app.py  bootstrap.py
app/pages/: 1_Consulta.py
docs/: 00-planning.md  01-visao-escopo.md  02-papeis-responsabilidades.md  03-fluxos-funcionais.md  04-requisitos.md  05-casos-de-uso.md  05-user-cases.md  05-user-stories.md  06-user-cases.md  06-user-stories.md  07-modelagem-entidades.md  08-dicionario-dados.md  08-erd.md  09-modelo-fisico-ddl.md  10-notas-modelagem.md  11-arquitetura-alto-nivel.md  11-regras-integridade-indices.md  12-componentes.md  13-estrutura-pastas.md  16-fluxo-tecnico-consulta.md  17-contratos-servicos-repos.md  18-estrategia-tecnica.md  18-estrategia-testes.md  19-decisoes-design.md  20-estrategia-testes.md  20-prototipos.md  21-batch-design.md  22-prototipos.md  README.md  index.md
docs/downloads/: Prototipo_KotaJa.html
docs/javascripts/: extra.js
docs/stylesheets/: extra.css
src/: batch_monthly.py
src/db/: connection.py  session.py
src/domain/: quote_models.py
src/repositories/: catalog_repository.py  log_repository.py  public_query_repository.py  quote_repository.py
src/services/: quote_service.py
tests/: test_app.py  test_base.py  test_bootstrap.py  test_catalog_repository.py  test_connection.py  test_log_repository.py  test_public_query_repository.py  test_quote_models.py  test_quote_repository.py  test_quote_service.py  test_session.py
